# router/app.go
@@ -7,30 +7,33 @@ import (
 
 func Router() *gin.Engine {
 	r := gin.Default()
-	/* ----- 订单相关路由组 ----- */
-	expressGroup := r.Group("/express")
+	apiGroup := r.Group("/api")
 	{
-		// 订单列表
-		expressGroup.GET("/list", service.GetExpressList)   // 代取列表
-		expressGroup.GET("/info", service.GetExpressDetail) // 订单详情
-		expressGroup.POST("/create", service.CreateExpress) // 新建订单
-		expressGroup.PUT("/order", service.TakeOrder)       // 接单接口
-		expressGroup.PUT("/finish", service.FinishOrder)    // 完成订单接口
-	}
-	/* ----- 订单相关路由组 ----- */
+		/* ----- 订单相关路由组 ----- */
+		expressGroup := apiGroup.Group("/express")
+		{
+			// 订单列表
+			expressGroup.GET("/list", service.GetExpressList)   // 代取列表
+			expressGroup.GET("/info", service.GetExpressDetail) // 订单详情
+			expressGroup.POST("/create", service.CreateExpress) // 新建订单
+			expressGroup.PUT("/order", service.TakeOrder)       // 接单接口
+			expressGroup.PUT("/finish", service.FinishOrder)    // 完成订单接口
+		}
+		/* ----- 订单相关路由组 ----- */
 
-	/* ----- 用户相关路由组 ----- */
-	userGroup := r.Group("/user")
-	{
-		userGroup.POST("/login", service.Login)        // 用户存在登录 不存在注册并登录
-		userGroup.GET("/info", service.GetUserInfo)    // 获取用户个人信息
-		userGroup.PUT("/info", service.UpdateUserInfo) // 修改用户个人信息
-	}
-	/* ----- 用户相关路由组 ----- */
+		/* ----- 用户相关路由组 ----- */
+		userGroup := apiGroup.Group("/user")
+		{
+			userGroup.POST("/login", service.Login)        // 用户存在登录 不存在注册并登录
+			userGroup.GET("/info", service.GetUserInfo)    // 获取用户个人信息
+			userGroup.PUT("/info", service.UpdateUserInfo) // 修改用户个人信息
+		}
+		/* ----- 用户相关路由组 ----- */
 
-	/* ----- 上传文件 ----- */
-	r.POST("/upload", service.UploadFile) // 上传文件
-	/* ----- 上传文件 ----- */
+		/* ----- 上传文件 ----- */
+		apiGroup.POST("/upload", service.UploadFile) // 上传文件
+		/* ----- 上传文件 ----- */
+	}
 
 	return r
 }
